[metadata]
name = PyDooray
version = 0.1.0
author = Kirin Choi
author_email = choi.kirin@gmail.com
description = Use Dooray! API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iizs/PyDooray
project_urls =
    Bug Tracker = https://github.com/iizs/PyDooray/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests>=2.14.0

[options.packages.find]
where = src